--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
+    "recharts": "^3.2.1",
     "tailwind-merge": "^3.3.1",
     "yup": "^1.7.1"
   },
