--- a/package.json
+++ b/package.json
@@ -14,17 +14,20 @@
     "@types/yup": "^0.29.14",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "expo": "^54.0.10",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
+    "react-native-web": "^0.21.0",
     "recharts": "^3.2.1",
     "tailwind-merge": "^3.3.1",
     "yup": "^1.7.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@expo/ngrok": "^4.1.3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
