--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@types/yup": "^0.29.14",
+    "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "expo": "^54.0.10",
@@ -29,6 +30,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
     "react-native-web": "^0.21.0",
+    "react-toastify": "^11.0.5",
     "recharts": "^3.2.1",
     "tailwind-merge": "^3.3.1",
     "yup": "^1.7.1"
