--- a/.env.local
+++ b/.env.local
@@ -3,4 +3,4 @@ NEXT_PUBLIC_API_URL=http://localhost:8000
 
 # Outras configurações se necessário
 # NEXT_PUBLIC_API_URL=http://192.168.1.100:8000  # Para rede local
-# NEXT_PUBLIC_API_URL=https://api.jomorais.com   # Para produção
+# NEXT_PUBLIC_API_URL=https://api.JOMORAIS.com   # Para produção
