--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "JOMORAIS-fronend",
+  "name": "jomorais-frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -24,7 +24,6 @@
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "expo": "^54.0.10",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.544.0",
@@ -32,18 +31,17 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
-    "react-native-web": "^0.21.0",
     "react-toastify": "^11.0.5",
     "recharts": "^3.2.1",
     "tailwind-merge": "^3.3.1",
+    "uuid": "^11.0.3",
     "yup": "^1.7.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@expo/ngrok": "^4.1.3",
     "@tailwindcss/postcss": "^4",
-    "@types/jspdf": "^2.0.0",
-    "@types/node": "^20",
+    "@types/estree": "^1.0.8",
+    "@types/node": "^20.19.19",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
@@ -51,5 +49,11 @@
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
+  },
+  "overrides": {
+    "glob": "^10.4.5",
+    "rimraf": "^5.0.10",
+    "inflight": "npm:@npmcli/fs@^3.1.1",
+    "uuid": "^11.0.3"
   }
 }
