--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-NEXT_PUBLIC_API_URL="http://localhost:8000"
-#NEXT_PUBLIC_API_URL="https://jomorais-backend-o5e5.onrender.com"
+#NEXT_PUBLIC_API_URL="http://localhost:8000"
+NEXT_PUBLIC_API_URL="https://jomorais-backend-o5e5.onrender.com"
 
