--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@tanstack/react-query": "^5.90.6",
     "@types/crypto-js": "^4.2.2",
     "@types/yup": "^0.29.14",
     "axios": "^1.12.2",
